--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 </div>
 </nav>
 <section id="hero">
+<div class="hero-content">
 <h1>Introducting Karma</h1>
 <h4>Bring WiFi with you, everywhere you go.</h4>
 <a class="button">Learn More</a>
+</div>
 </section>
 
 
