added footer and favicon

--- a/index.html
+++ b/index.html
@@ -4,30 +4,69 @@
     <meta charset="UTF-8">
     <title>Karma</title>
     <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 </head>
 <body>
-<nav class="top-nav">
-<div class="nav-contents">
-	<img class="logo" src="img/logo.svg" alt="Karma">
-	<ul class='nav-links'>
-	<li><a class= "active" href="index.html">Meet Karma</a></li>
-	<li><a href="how-it-works.html">How it Works</a></li>
-	<li><a href="store.html">Store</a></li>
-	<li><a href="Blog">Blog</a></li>
-	<li><a href="help.html">Help</a></li>
-	<li><a href="login.html">Login</a></li>
-	</ul>
-</div>
-</nav>
+	<nav class="top-nav">
+		<div class="nav-contents">
+			<img class="logo" src="img/logo.svg" alt="Karma">
+				<ul class='nav-links'>
+					<li><a class= "active" href="index.html">Meet Karma</a></li>
+					<li><a href="how-it-works.html">How it Works</a></li>
+					<li><a href="store.html">Store</a></li>
+					<li><a href="Blog">Blog</a></li>
+					<li><a href="help.html">Help</a></li>
+					<li><a href="login.html">Login</a></li>
+				</ul>
+		</div>
+	</nav>
 <section id="hero">
-<div class="hero-content">
-<h1>Introducting Karma</h1>
-<h4>Bring WiFi with you, everywhere you go.</h4>
-<a class="button">Learn More</a>
-</div>
+	<div class="hero-content">
+		<h1>Introducting Karma</h1>
+		<h4>Bring WiFi with you, everywhere you go.</h4>
+		<a class="button">Learn More</a>
+	</div>
 </section>
+<section id="about">
+	<div class="about-contents">
+		<h2>Everyone needs a little Karma.</h2>
+		<ul class='icon-points'>
+			<li>
+			<img src="img/icon-devices.svg" alt="Icon for Devices Image">
+				<div class='caption'>
+					<h3>Internet for All Devices.</h3>
+				</div>
+			</li>
+			<li>
+			<img src="img/icon-coffee.svg" alt="icon for productivity boost">
+				<div class='caption'>
+					<h3>Boost your productivity.</h3>
+				</div>
+			</li>
+			<li>
+			<img src="img/icon-refill.svg" alt="icon for pay as you go">
+				<div class='caption'>
+					<h3>Pay as You Go.</h3>
+				</div>
+			</li>
+		</ul>
+	</div>
+</section>
+<footer>
+		<div class="footer-content">
+		
+			<h5>Join us on:</h5>
+			<ul class="social-icons">
+			<li class="twitter"><a href="http://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+			<li class="facebook"><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></i></li>
+			<li class="instagram"><a href="http://www.instagram.com"><i class="fa fa-instagram"></i></a></i></li>
+			</ul>
+			<p class="copyright">&copy; Karma Mobility Inc.</p>
+		</div>
+
+</footer>
 
 
 
